--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -70,7 +70,7 @@ main {
 
 .profileHead {
   height: 144px;
-  width: 168px;
+  width: 170px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -121,6 +121,7 @@ main {
 }
 
 #favorite {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -132,7 +133,7 @@ main {
 
 #favorite audio {
   height: 2rem;
-  width: 200px;
+  width: 100%;
 }
 
 #favoriteContainer {
@@ -231,6 +232,7 @@ main {
 
 .collection .timing {
   align-self: flex-start;
+  width: 35px;
 }
 
 .collection .middleBox {
